Anonymous | Login | 2021-01-24 06:56 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0026978 | Open CASCADE | [OCCT] OCCT:VIS | public | 2015-12-10 19:06 | 2019-08-17 12:24 | ||||
Reporter | ssv | ||||||||
Assigned To | bugmaster | ||||||||
Priority | normal | Severity | minor | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | Windows | OS | VC++ 2010 | OS Version | 64 bit | ||||
Product Version | [OCCT] 7.0.0 | ||||||||
Target Version | [OCCT] 7.4.0 | Fixed in Version | [OCCT] 7.4.0 | ||||||
Summary | 0026978: VIS - Interactive selection is insensitive to swept shell | ||||||||
Description | Look at the model attached. Once loaded for visualization with IVtk it gives troubles on selection: some zones under the mouse yield no reaction (see screenshots). This is very noticeable and annoying on the provided geometry. | ||||||||
Steps To Reproduce | pload VIS restore evol3.brep s ivtkinit ivtkdisplay s ivtksetdispmode s 1 # Start interactive selection manually | ||||||||
Tags | No tags attached. | ||||||||
Test case number | v3d ivtk bug26978 | ||||||||
Attached Files | ![]() ![]() ![]() | ||||||||
![]() |
|
(0069488) mkv (tester) 2017-08-16 18:52 |
Problem described in issue is reproduced on current state of OCCT. |
(0085614) ssv (developer) 2019-07-12 14:51 |
The issue is reproducible, though it has no urgency (the client code was corrected to use VTK native pickers for selection). |
(0086209) git (administrator) 2019-08-12 17:49 |
Branch CR26978 has been created by kgv. SHA-1: 70a61f2a686fcbb82fa8397b0c6779f286454c4a Detailed log of new commits: Author: kgv Date: Mon Aug 12 17:47:28 2019 +0300 0026978: VIS - Interactive selection is insensitive to swept shell Do not use BRepBndLib::AddClose() on arbitrary shapes. |
(0086210) git (administrator) 2019-08-12 17:52 |
Branch CR26978 has been updated forcibly by kgv. SHA-1: d730cd334d2e6d9f0fa1f63946c1dc8b20d06605 |
(0086214) kgv (developer) 2019-08-12 19:09 |
Patch is ready for review. http://jenkins-test-12.nnov.opencascade.com:8080/view/CR26978-master-KGV/ [^] |
(0086233) san (developer) 2019-08-13 18:32 |
Branch CR26978 reviewed without remarks. |
(0086237) bugmaster (administrator) 2019-08-13 20:04 |
Combination - OCCT branch : CR26978 master SHA - 70a61f2a686fcbb82fa8397b0c6779f286454c4a 5f5b1aed1c6e139bbd34314eca77ae7abcd8895c Products branch : master SHA - 1144fe7d76516b4f51602e5bca86c8f2a51359c7 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 16262.470000000032 / 16274.830000000024 [-0.08%] Products Total CPU difference: 10470.06000000003 / 10475.390000000047 [-0.05%] Windows-64-VC14: OCCT Total CPU difference: 17683.359375 / 17627.84375 [+0.31%] Products Total CPU difference: 12087.359375 / 11990.921875 [+0.80%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
(0086302) git (administrator) 2019-08-17 12:24 |
Branch CR26978 has been deleted by inv. SHA-1: d730cd334d2e6d9f0fa1f63946c1dc8b20d06605 |
![]() |
|||
occt: master 2546fd47
Timestamp: 2019-08-12 14:47:28 Author: kgv Committer: bugmaster [ Details ] [ Diff ] |
0026978: VIS - Interactive selection is insensitive to swept shell IVtkOCC_SelectableObject::BoundingBox(), AIS_Shape::BoundingBox() now don't use BRepBndLib::AddClose() on arbitrary shapes. |
||
mod - src/AIS/AIS_Shape.cxx | [ Diff ] [ File ] | ||
mod - src/IVtkOCC/IVtkOCC_SelectableObject.cxx | [ Diff ] [ File ] | ||
mod - tests/v3d/ivtk/bug26978 | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2015-12-10 19:06 | ssv | New Issue | |
2015-12-10 19:06 | ssv | Assigned To | => san |
2015-12-10 19:06 | ssv | File Added: evol3.brep | |
2015-12-10 19:06 | ssv | File Added: IVtkTest.png | |
2015-12-10 19:07 | ssv | File Added: IVtkTest_ok.png | |
2015-12-11 14:10 | san | Assigned To | san => aba |
2016-11-03 17:07 | abv | Target Version | 7.1.0 => 7.2.0 |
2017-07-27 09:43 | abv | Target Version | 7.2.0 => 7.4.0 |
2017-08-16 18:52 | mkv | Test case number | => v3d ivtk bug26978 |
2017-08-16 18:52 | mkv | Note Added: 0069488 | |
2019-07-12 14:51 | ssv | Note Added: 0085614 | |
2019-07-12 14:51 | ssv | Target Version | 7.4.0 => Unscheduled |
2019-08-12 17:43 | kgv | Target Version | Unscheduled => 7.4.0 |
2019-08-12 17:43 | kgv | Summary | Interactive selection is insensitive to swept shell => VIS - Interactive selection is insensitive to swept shell |
2019-08-12 17:49 | git | Note Added: 0086209 | |
2019-08-12 17:52 | git | Note Added: 0086210 | |
2019-08-12 19:09 | kgv | Note Added: 0086214 | |
2019-08-12 19:09 | kgv | Assigned To | aba => san |
2019-08-12 19:09 | kgv | Status | new => resolved |
2019-08-13 18:32 | san | Note Added: 0086233 | |
2019-08-13 18:32 | san | Assigned To | san => bugmaster |
2019-08-13 18:32 | san | Status | resolved => reviewed |
2019-08-13 20:04 | bugmaster | Note Added: 0086237 | |
2019-08-13 20:04 | bugmaster | Status | reviewed => tested |
2019-08-17 12:07 | bugmaster | Changeset attached | => occt master 2546fd47 |
2019-08-17 12:07 | bugmaster | Status | tested => verified |
2019-08-17 12:07 | bugmaster | Resolution | open => fixed |
2019-08-17 12:24 | git | Note Added: 0086302 |
Copyright © 2000 - 2021 MantisBT Team |